SW-9792 - Fixed ipad overflow bug - replaced before element delimiter with a div for a more robust element - fixed menu scroller showing scrollbar on IE

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_components/menu-scroller.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_components/menu-scroller.less
@@ -5,7 +5,6 @@
 }
 
 .navigation--list-wrapper {
-    .unitize-height(38);
     position: relative;
     overflow: hidden;
 }
@@ -16,13 +15,10 @@
     position: relative;
     white-space: nowrap;
     left: 0;
-    -ms-overflow-style: none;
     -webkit-overflow-scrolling: touch;
 
-    // Hide scrollbars in webkit browsers
     &::-webkit-scrollbar {
-        width: 0  !important;
-        height: 0  !important;
+        display: none;
     }
 }
 
