--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/main-navigation.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/main-navigation.less
@@ -12,7 +12,6 @@
 			.clearfix();
             .unitize-padding(0, 10);
             margin: 0;
-            overflow-x: scroll;
             position: relative;
             white-space: nowrap;
 		}
